# nonebot-plugin-uma

./: .gitignore  README.md  pyproject.toml
nonebot_plugin_uma/: __init__.py  config.py  py.typed
nonebot_plugin_uma/birthday/: __init__.py  data_manager.py
nonebot_plugin_uma/gacha/: __init__.py  gacha_engine.py  pool_manager.py  pool_spider.py  res_spider.py  target.py
nonebot_plugin_uma/news/: __init__.py  news_model.py  news_spider.py
nonebot_plugin_uma/utils/: __init__.py  constants.py  data.py  http.py  image.py  limiter.py
