[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nonebot-plugin-umamusume"
version = "0.2.0"
description = "NoneBot2 赛马娘插件 - 模拟抽卡 | 新闻推送 | 生日提醒"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.10"
authors = [
    { name = "Baimotong" },
]
dependencies = [
    "nonebot2>=2.4.4",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot-plugin-apscheduler>=0.5.0",
    "nonebot-plugin-localstore>=0.7.0",
    "httpx>=0.28.0",
    "pillow>=10.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
]

[project.urls]
Homepage = "https://github.com/Baimotong/nonebot-plugin-umamusume"
Repository = "https://github.com/Baimotong/nonebot-plugin-umamusume"

[tool.nonebot]
plugins = ["nonebot_plugin_uma"]

[tool.hatch.build.targets.wheel]
packages = ["nonebot_plugin_uma"]
